--- a/Mod_3 Solution/css/style.css
+++ b/Mod_3 Solution/css/style.css
@@ -2,6 +2,10 @@
 *{
     box-sizing: border-box;
 }
+html{
+    background-color: #2d3436;
+    background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+}
 body{
     color: white;
     background-image: url(Images/background-adare-restaurant.jpg);
