--- a/Mod_3 Solution/css/style.css
+++ b/Mod_3 Solution/css/style.css
@@ -3,12 +3,12 @@
     box-sizing: border-box;
 }
 html{
-    background-color: #2d3436;
-    background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+    /*background-color: #2d3436;
+    background-image: linear-gradient();*/
 }
 body{
     color: white;
-    background-image: url(Images/background-adare-restaurant.jpg);
+    background-image: url('Images/background-adare-restaurant.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
