--- a/Mod_3 Solution/css/style.css
+++ b/Mod_3 Solution/css/style.css
@@ -8,7 +8,7 @@ html{
 }
 body{
     color: white;
-    background-image: url('Images/background-adare-restaurant.jpg');
+    background-image: url(../Images/background-adare-restaurant.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
